# ChainCommand

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  ChainCommand_README.md  Dockerfile  LICENSE  README.md  README_zh.md  capture_api.mjs  debug.mjs  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  screenshot.mjs
.github/workflows/: ci.yml
chaincommand/: __init__.py  __main__.py  audit.py  auth.py  config.py  metrics.py  mlflow_registry.py  orchestrator.py  rbac.py
chaincommand/agents/: __init__.py  anomaly_detector_agent.py  base_agent.py  coordinator.py  demand_forecaster.py  inventory_optimizer.py  logistics_coordinator.py  market_intelligence.py  reporter.py  risk_assessor.py  strategic_planner.py  supplier_manager.py
chaincommand/api/: __init__.py  app.py
chaincommand/aws/: __init__.py  athena_client.py  aws_backend.py  backend.py  config.py  quicksight_client.py  redshift_client.py  s3_client.py
chaincommand/bom/: __init__.py  (+2 more)
data_quality/: great_expectations.yml  validate.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml
loadtests/: k6_api.js  k6_health.js  slo.yaml
mlflow/: docker-compose.mlflow.yaml
monitoring/: alert_rules.yml  docker-compose.monitoring.yaml  prometheus.yml
pipelines/: docker-compose.airflow.yaml
serving/: bentofile.yaml  service.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_mlflow_registry.py  test_orchestrator_lifecycle.py  test_property_based.py
(+84 files in other folders)
